[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/map/pumps-up.png" type="Texture2D" id=1]
[ext_resource path="res://art/map/ultratek.png" type="Texture2D" id=2]
[ext_resource path="res://art/map/vastmart.png" type="Texture2D" id=3]
[ext_resource path="res://art/map/home.png" type="Texture2D" id=4]
[ext_resource path="res://art/map/map-16.png" type="Texture2D" id=5]
[ext_resource path="res://scripts/Map.gd" type="Script" id=6]
[ext_resource path="res://art/map/park.png" type="Texture2D" id=7]

[node name="Map" type="Node2D"]
script = ExtResource( 6 )

[node name="MapImage" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource( 5 )

[node name="Home" type="TextureRect" parent="MapImage"]
offset_left = 847.0
offset_top = 179.0
offset_right = 986.0
offset_bottom = 246.0
texture = ExtResource( 4 )

[node name="PumpsUp" type="TextureRect" parent="MapImage"]
offset_left = 601.0
offset_top = 306.0
offset_right = 806.0
offset_bottom = 397.0
texture = ExtResource( 1 )

[node name="Vastmart" type="TextureRect" parent="MapImage"]
offset_left = 664.0
offset_top = 91.0
offset_right = 869.0
offset_bottom = 161.0
texture = ExtResource( 3 )

[node name="Ultratek" type="TextureRect" parent="MapImage"]
offset_left = 296.0
offset_top = 165.0
offset_right = 498.0
offset_bottom = 232.0
texture = ExtResource( 2 )

[node name="Park" type="TextureRect" parent="MapImage"]
offset_left = 205.0
offset_top = 229.0
offset_right = 315.0
offset_bottom = 317.0
texture = ExtResource( 7 )

[connection signal="gui_input" from="MapImage/Home" to="." method="_on_Home_gui_input"]
[connection signal="mouse_entered" from="MapImage/Home" to="." method="_on_Home_mouse_entered"]
[connection signal="mouse_exited" from="MapImage/Home" to="." method="_on_Home_mouse_exited"]
[connection signal="gui_input" from="MapImage/PumpsUp" to="." method="_on_PumpsUp_gui_input"]
[connection signal="mouse_entered" from="MapImage/PumpsUp" to="." method="_on_PumpsUp_mouse_entered"]
[connection signal="mouse_exited" from="MapImage/PumpsUp" to="." method="_on_PumpsUp_mouse_exited"]
[connection signal="gui_input" from="MapImage/Vastmart" to="." method="_on_Vastmart_gui_input"]
[connection signal="mouse_entered" from="MapImage/Vastmart" to="." method="_on_Vastmart_mouse_entered"]
[connection signal="mouse_exited" from="MapImage/Vastmart" to="." method="_on_Vastmart_mouse_exited"]
[connection signal="gui_input" from="MapImage/Ultratek" to="." method="_on_Ultratek_gui_input"]
[connection signal="mouse_entered" from="MapImage/Ultratek" to="." method="_on_Ultratek_mouse_entered"]
[connection signal="mouse_exited" from="MapImage/Ultratek" to="." method="_on_Ultratek_mouse_exited"]
[connection signal="gui_input" from="MapImage/Park" to="." method="_on_Park_gui_input"]
[connection signal="mouse_entered" from="MapImage/Park" to="." method="_on_Park_mouse_entered"]
[connection signal="mouse_exited" from="MapImage/Park" to="." method="_on_Park_mouse_exited"]
